--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
 rvm:
-  - 2.1.2
+  - 2.3.1
 script: bundle exec rspec spec
+sudo: false # https://github.com/bundler/bundler/issues/3558#issuecomment-171347979 related to https://travis-ci.org/joel/uniq_identifier/builds/163131859
